--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&display=swap');
+@import url('./reset.css');
 body{
     font-family: 'Noto Sans', sans-serif;
 }
@@ -14,28 +15,36 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
     padding-top: 70px;
     padding-bottom: 50px;
     
 }
-.logo {
-    
-    margin-left: 200px;   
+.class{
+    display: none;
 }
+
+.class a:hover{
+    transition: 0.7s ease;
+    transform: translateY(5px);
+}
+
 .logo h1{
     font-weight: 600px;
     color: #34495e;
+    font-size:30px;
+    padding-left: 100px;
 }
+
  .nav-links{
     display: flex;
+    
  }
  .nav-links a{
     text-decoration: none;
     color: black;
     padding-right: 30px;
     margin-right: 20px;
-    padding-top:50px;
+    
 
  }
  
@@ -47,9 +56,11 @@ header{
 .filtre-nature{
     
     display: flex;
-    justify-content: center;
+    justify-content:center;
+    align-items: center;
     background-color:#ecf0f1;
     padding-bottom: 20px;
+    padding-left: 100px;
     box-shadow: 11px 9px 20px rgb(0 0 0 / 40%);
 }
 .filtre-nature select{
@@ -59,26 +70,43 @@ header{
     margin-right: 100px;
     margin-top: 35px;
     font-size:22px;
-    
-
+    font-weight:600;
+}
+.sel-category{
+    display: flex;
+    justify-content: space-between;
+}
+.sel-location{
+    display: flex;
+    justify-content: space-between;
 }
 .section{
     display: flex;
-    padding-bottom: 100px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom:100px;
    
 }
 h1 span{
     color: #16a085;
 }
 .section > .left-side{
-    flex-basis: 50%;
-    margin-left: 200px;
+    flex-basis:60%;
     padding-top: 55px;
-
+}
+.left-side h1{
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 30px;
+}
+.left-side h3{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
 }
 
 .section > .right-side{
-flex:2;
+flex:0.4;
 padding-top: 70px;
 margin-left:50px;
 }
@@ -93,7 +121,99 @@ h3 span{
 }
 .footer p{
     color: #16a085;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     padding-left: 10px;
     
 }
+@media(max-width:1223px) and (min-width:768px){
+.class {
+    display: flex;
+    padding-right:100px;
+}
+.class a{
+    color:#34495e;
+}
+
+
+.nav-links{
+    display: none;
+}
+.sel-category{
+    display: flex;
+    flex-direction: column;
+}
+.sel-location{
+    display: flex;
+    flex-direction: column;
+}
+.filtre-nature select{
+    font-size: 18px;  
+}
+.section{
+    display: flex;
+    flex-wrap:wrap ;
+    /* justify-content: center; */
+    align-items: center;
+    padding: 40px 20px 40px;
+
+}
+.left-side h1{
+    font-size:22px;
+}
+.left-side h3{
+    font-size: 16px;
+}
+
+}
+@media(max-width:768px) and (min-width:500px){
+    .class{
+        display: flex;
+    }
+    .class a{
+        color:#34495e;
+    }
+    .nav-links{
+        display: none;
+    }
+    .header{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+   .logo h1{
+    padding:0;
+   }
+   .filtre-nature{
+    padding-left:20px;
+    padding-right: 20px;
+   }
+   .sel-category{
+    display: flex;
+    flex-wrap: wrap;
+   }
+   .sel-location{
+    display: flex;
+    flex-wrap: wrap;
+   }
+   .filtre-nature select{
+    font-size: 16px;
+    margin-right:10px;
+    margin-left: 10px;
+   }
+   .section{
+    display: flex;
+    flex-wrap: wrap;
+   }
+   
+   .left-side h1{
+    font-size: 20px;
+   }
+   .left-side h3{
+    font-size: 14px;
+   }
+   .right-side img{
+    width: 300px;
+    height: 300px;
+   }
+
+}
+
